--- a/.swiftpm/xcode/xcshareddata/xcschemes/LayoutKit.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/LayoutKit.xcscheme
@@ -28,6 +28,18 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "LayoutKitTests"
+               BuildableName = "LayoutKitTests"
+               BlueprintName = "LayoutKitTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
